--- a/style.css
+++ b/style.css
@@ -341,7 +341,6 @@
   .footer-3 .contact {
       font-size: 25px;
       font-weight: 800;
-      margin-bottom: 20px;
   }
 
   .footer-3 input {
@@ -353,16 +352,13 @@
       border-radius: 10px;
   }
 
-  .footer-3 button, .footer-3 a {
+  .footer-3 button {
       border: solid 1px black;
       background-color: #F3BB1B;
       padding: 5px;
       font-weight: 800;
       font-size: small;
-      text-align: center;
-      text-decoration: none;
-      color: black;
-      max-width: 155px;
+      max-width: 105px;
       border-radius: 10px;
   }
 
