--- a/style.css
+++ b/style.css
@@ -6,44 +6,54 @@
       font-family: Arial, Helvetica, sans-serif;
   }
 
-  .owl-carousel .owl-nav.disabled, .owl-carousel .owl-nav{
-    display: flex !important;
-    justify-content: center;
-  }
-  
-  .owl-carousel .owl-nav.disabled > *, .owl-carousel .owl-nav > *{
-    margin: 0px 10px;
-    margin: 0px;
-    max-width: 150px;
-    width: 100%;
-    margin: 0px 20px;
+  .owl-carousel .owl-nav.disabled,
+  .owl-carousel .owl-nav {
+      display: flex !important;
+      justify-content: center;
   }
 
-  .responsealert{
-    display: none;
-  }
-  .responsealert.show{
-    display: inline;
-    font-weight: bold;
-    color: #F3BB1B;
+  .owl-carousel .owl-nav.disabled>*,
+  .owl-carousel .owl-nav>* {
+      margin: 0px 10px;
+      margin: 0px;
+      max-width: 150px;
+      width: 100%;
+      margin: 0px 20px;
   }
 
-  .owl-carousel .owl-nav .btn-prev,.owl-carousel .owl-nav .btn-next,.owl-carousel .owl-nav .am-prev,.owl-carousel .owl-nav .am-next{
-    max-width: 150px;
-    width: 100%;
-    border: solid 1px black;
-    border-radius: 10px;
-    color: black;
-    background-color: white;
-    padding: 5px;
-    font-size: large;
-    transition: all ease-in-out 0.5s;
+  .responsealert {
+      display: none;
   }
-  .owl-carousel .owl-nav .btn-prev:hover,.owl-carousel .owl-nav .btn-next:hover,.owl-carousel .owl-nav .am-prev:hover,.owl-carousel .owl-nav .am-next:hover{
-    /* box-shadow: 2px 2px 5px gainsboro; */
-   background-color:#21106A;
-   color: white;
-   border: none;
+
+  .responsealert.show {
+      display: inline;
+      font-weight: bold;
+      color: #F3BB1B;
+  }
+
+  .owl-carousel .owl-nav .btn-prev,
+  .owl-carousel .owl-nav .btn-next,
+  .owl-carousel .owl-nav .am-prev,
+  .owl-carousel .owl-nav .am-next {
+      max-width: 150px;
+      width: 100%;
+      border: solid 1px black;
+      border-radius: 10px;
+      color: black;
+      background-color: white;
+      padding: 5px;
+      font-size: large;
+      transition: all ease-in-out 0.5s;
+  }
+
+  .owl-carousel .owl-nav .btn-prev:hover,
+  .owl-carousel .owl-nav .btn-next:hover,
+  .owl-carousel .owl-nav .am-prev:hover,
+  .owl-carousel .owl-nav .am-next:hover {
+      /* box-shadow: 2px 2px 5px gainsboro; */
+      background-color: #21106A;
+      color: white;
+      border: none;
   }
 
   section {
@@ -59,7 +69,7 @@
       height: 100%;
       position: relative;
       background-repeat: no-repeat;
-    background-size: cover;
+      background-size: cover;
   }
 
   .hero .hero-img {
@@ -328,8 +338,9 @@
       font-weight: 700;
       text-align: center;
   }
-  .social-link  a{
-    text-decoration: none;
+
+  .social-link a {
+      text-decoration: none;
   }
 
   .footer-2 .location>* {
@@ -364,6 +375,31 @@
       font-size: small;
       max-width: 105px;
       border-radius: 10px;
+  }
+
+  .call-me {
+      position: fixed;
+      bottom: 15px;
+      left: 20px;
+      z-index: 10000;
+  }
+
+  .call-me img, .whatsapp-me img {
+      width: 0px;
+      height: 0px;
+      transition: all ease-in-out 0.3s;
+  }
+
+  .call-me.active img, .whatsapp-me.active img {
+      width: 60px;
+      height: 60px;
+  }
+
+  .whatsapp-me {
+      position: fixed;
+      bottom: 15px;
+      right: 20px;
+      z-index: 10000;
   }
 
   @media only screen and (max-width: 1250px) {
