--- a/style.css
+++ b/style.css
@@ -571,3 +571,26 @@
           width: 120px;
       }
   }
+
+  .contact-popup input {
+    -webkit-border-radius: 10px;
+    display: block;
+    margin: 0;
+    appearance: none;
+    width: 100%;
+    font-size: 14px!important;
+    padding: 10px!important;
+    border: 1px dashed rgba(0,0,0,.15)!important;
+}
+
+@media (min-width:992px) and (max-width: 1400px) {
+  .agenda-content p {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-weight: bold;
+    font-size: 17px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+}
